--- a/examples/eggbox.ipynb
+++ b/examples/eggbox.ipynb
@@ -31,7 +31,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "7392it [00:04, 1615.13it/s, +1000 | bound: 26 | nc: 1 | ncall: 120363 | eff(%):  7.031 | loglstar:   -inf < 242.999 <    inf | logz: 235.847 +/-  0.079 | dlogz:  0.001 >  1.009]"
+      "7423it [00:04, 1550.07it/s, +1000 | bound: 26 | nc: 1 | ncall: 121189 | eff(%):  7.008 | loglstar:   -inf < 243.000 <    inf | logz: 235.811 +/-  0.079 | dlogz:  0.001 >  1.009]"
      ]
     },
     {
@@ -40,9 +40,9 @@
      "text": [
       "\n",
       "==== RESULTS ====\n",
-      "dynesty estimated logZ = 235.847 ± 0.193\n",
+      "dynesty estimated logZ = 235.811 ± 0.194\n",
       "True logZ (literature) = 235.856\n",
-      "Error = -0.009\n"
+      "Error = -0.045\n"
      ]
     },
     {
@@ -120,14 +120,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "9424722b",
    "metadata": {},
    "outputs": [],
    "source": [
     "import morphZ\n",
-    "import logging\n",
-    "from morphZ import setup_logging ; setup_logging(level=logging.INFO)\n",
+    "# import logging\n",
+    "# from morphZ import setup_logging ; setup_logging(level=logging.INFO)\n",
     "# Prior bounds\n",
     "prior_min, prior_max = 0.0, 10.0 * np.pi\n",
     "prior_volume = (prior_max - prior_min) ** 2  # 2-D uniform cube\n",
@@ -147,161 +147,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "ad336152",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:morphZ.morph:Using Morph_Pairwise for proposal distribution.\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total samples: 2798 Dimensions: 2\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:morphZ.bridge:Filtered proposal samples: 913 valid samples out of 1000 total samples.\n",
-      "INFO:morphZ.bridge:iteration: 1 log(z) old: 235.98151212619965 log(z) New: 235.90035327701224\n",
-      "INFO:morphZ.bridge:iteration: 2 log(z) old: 235.90035327701224 log(z) New: 235.89787124216537\n",
-      "INFO:morphZ.bridge:Converged in 2 iterations. log(z): 235.9004 +/-: 0.0164\n",
-      "INFO:morphZ.bridge:Filtered proposal samples: 903 valid samples out of 1000 total samples.\n",
-      "INFO:morphZ.bridge:iteration: 1 log(z) old: 235.89954280179742 log(z) New: 235.83890948021315\n",
-      "INFO:morphZ.bridge:iteration: 2 log(z) old: 235.83890948021315 log(z) New: 235.83803528330358\n",
-      "INFO:morphZ.bridge:Converged in 2 iterations. log(z): 235.8389 +/-: 0.0177\n",
-      "INFO:morphZ.bridge:Filtered proposal samples: 899 valid samples out of 1000 total samples.\n",
-      "INFO:morphZ.bridge:iteration: 1 log(z) old: 235.9491084747081 log(z) New: 235.86083587673193\n",
-      "INFO:morphZ.bridge:iteration: 2 log(z) old: 235.86083587673193 log(z) New: 235.8585336067502\n",
-      "INFO:morphZ.bridge:Converged in 2 iterations. log(z): 235.8608 +/-: 0.0176\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Filtered proposal samples: 913 valid samples out of 1000 total samples.\n",
+      "Total samples: 2808 Dimensions: 2\n",
+      "Filtered proposal samples: 4009 valid samples out of 5000 total samples.\n",
       "Estimation 1/10\n",
-      "iteration: 2 log(z) old: 235.90035327701224 log(z) New: 235.89787124216537\n",
-      "Converged in 2 iterations. log(z): 235.9004 +/-: 0.0164\n",
+      "iteration: 3 log(z) old: 236.22493801720324 log(z) New: 236.22644119937056\n",
+      "Converged in 3 iterations. log(z): 236.2264 +/-: 0.1688\n",
       "\n",
-      "Filtered proposal samples: 903 valid samples out of 1000 total samples.\n",
+      "Filtered proposal samples: 3996 valid samples out of 5000 total samples.\n",
       "Estimation 2/10\n",
-      "iteration: 2 log(z) old: 235.83890948021315 log(z) New: 235.83803528330358\n",
-      "Converged in 2 iterations. log(z): 235.8389 +/-: 0.0177\n",
+      "iteration: 3 log(z) old: 236.18570940786609 log(z) New: 236.1896084864163\n",
+      "Converged in 3 iterations. log(z): 236.1896 +/-: 0.1704\n",
       "\n",
-      "Filtered proposal samples: 899 valid samples out of 1000 total samples.\n",
+      "Filtered proposal samples: 3987 valid samples out of 5000 total samples.\n",
       "Estimation 3/10\n",
-      "iteration: 2 log(z) old: 235.86083587673193 log(z) New: 235.8585336067502\n",
-      "Converged in 2 iterations. log(z): 235.8608 +/-: 0.0176\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:morphZ.bridge:Filtered proposal samples: 902 valid samples out of 1000 total samples.\n",
-      "INFO:morphZ.bridge:iteration: 1 log(z) old: 235.98228851118733 log(z) New: 235.8964134013512\n",
-      "INFO:morphZ.bridge:iteration: 2 log(z) old: 235.8964134013512 log(z) New: 235.89376128305366\n",
-      "INFO:morphZ.bridge:Converged in 2 iterations. log(z): 235.8964 +/-: 0.0166\n",
-      "INFO:morphZ.bridge:Filtered proposal samples: 903 valid samples out of 1000 total samples.\n",
-      "INFO:morphZ.bridge:iteration: 1 log(z) old: 235.9570668962784 log(z) New: 235.88269815836225\n",
-      "INFO:morphZ.bridge:iteration: 2 log(z) old: 235.88269815836225 log(z) New: 235.88078965205065\n",
-      "INFO:morphZ.bridge:Converged in 2 iterations. log(z): 235.8827 +/-: 0.0168\n",
-      "INFO:morphZ.bridge:Filtered proposal samples: 911 valid samples out of 1000 total samples.\n",
-      "INFO:morphZ.bridge:iteration: 1 log(z) old: 235.9369731022758 log(z) New: 235.87220374473446\n",
-      "INFO:morphZ.bridge:iteration: 2 log(z) old: 235.87220374473446 log(z) New: 235.8707666869567\n",
-      "INFO:morphZ.bridge:Converged in 2 iterations. log(z): 235.8722 +/-: 0.0169\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Filtered proposal samples: 902 valid samples out of 1000 total samples.\n",
+      "iteration: 2 log(z) old: 236.0780268728843 log(z) New: 236.08588082901034\n",
+      "Converged in 2 iterations. log(z): 236.0859 +/-: 0.1855\n",
+      "\n",
+      "Filtered proposal samples: 4047 valid samples out of 5000 total samples.\n",
       "Estimation 4/10\n",
-      "iteration: 2 log(z) old: 235.8964134013512 log(z) New: 235.89376128305366\n",
-      "Converged in 2 iterations. log(z): 235.8964 +/-: 0.0166\n",
+      "iteration: 3 log(z) old: 235.92187447408799 log(z) New: 235.9200649828501\n",
+      "Converged in 3 iterations. log(z): 235.9219 +/-: 0.1900\n",
       "\n",
-      "Filtered proposal samples: 903 valid samples out of 1000 total samples.\n",
+      "Filtered proposal samples: 4033 valid samples out of 5000 total samples.\n",
       "Estimation 5/10\n",
-      "iteration: 2 log(z) old: 235.88269815836225 log(z) New: 235.88078965205065\n",
-      "Converged in 2 iterations. log(z): 235.8827 +/-: 0.0168\n",
+      "iteration: 3 log(z) old: 236.03181789866449 log(z) New: 236.03309505653476\n",
+      "Converged in 3 iterations. log(z): 236.0331 +/-: 0.1849\n",
       "\n",
-      "Filtered proposal samples: 911 valid samples out of 1000 total samples.\n",
+      "Filtered proposal samples: 4046 valid samples out of 5000 total samples.\n",
       "Estimation 6/10\n",
-      "iteration: 2 log(z) old: 235.87220374473446 log(z) New: 235.8707666869567\n",
-      "Converged in 2 iterations. log(z): 235.8722 +/-: 0.0169\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:morphZ.bridge:Filtered proposal samples: 903 valid samples out of 1000 total samples.\n",
-      "INFO:morphZ.bridge:iteration: 1 log(z) old: 235.95045707811053 log(z) New: 235.8866093983137\n",
-      "INFO:morphZ.bridge:iteration: 2 log(z) old: 235.8866093983137 log(z) New: 235.88513311788896\n",
-      "INFO:morphZ.bridge:Converged in 2 iterations. log(z): 235.8866 +/-: 0.0165\n",
-      "INFO:morphZ.bridge:Filtered proposal samples: 908 valid samples out of 1000 total samples.\n",
-      "INFO:morphZ.bridge:iteration: 1 log(z) old: 235.9406225162942 log(z) New: 235.86240648225194\n",
-      "INFO:morphZ.bridge:iteration: 2 log(z) old: 235.86240648225194 log(z) New: 235.8607949106495\n",
-      "INFO:morphZ.bridge:Converged in 2 iterations. log(z): 235.8624 +/-: 0.0172\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "iteration: 3 log(z) old: 236.08005129568264 log(z) New: 236.08163646740292\n",
+      "Converged in 3 iterations. log(z): 236.0816 +/-: 0.1796\n",
       "\n",
-      "Filtered proposal samples: 903 valid samples out of 1000 total samples.\n",
+      "Filtered proposal samples: 4058 valid samples out of 5000 total samples.\n",
       "Estimation 7/10\n",
-      "iteration: 2 log(z) old: 235.8866093983137 log(z) New: 235.88513311788896\n",
-      "Converged in 2 iterations. log(z): 235.8866 +/-: 0.0165\n",
+      "iteration: 2 log(z) old: 235.9873592194304 log(z) New: 235.98949476439094\n",
+      "Converged in 2 iterations. log(z): 235.9895 +/-: 0.1902\n",
       "\n",
-      "Filtered proposal samples: 908 valid samples out of 1000 total samples.\n",
+      "Filtered proposal samples: 4006 valid samples out of 5000 total samples.\n",
       "Estimation 8/10\n",
-      "iteration: 2 log(z) old: 235.86240648225194 log(z) New: 235.8607949106495\n",
-      "Converged in 2 iterations. log(z): 235.8624 +/-: 0.0172\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:morphZ.bridge:Filtered proposal samples: 923 valid samples out of 1000 total samples.\n",
-      "INFO:morphZ.bridge:iteration: 1 log(z) old: 235.9555650554842 log(z) New: 235.8778907560744\n",
-      "INFO:morphZ.bridge:iteration: 2 log(z) old: 235.8778907560744 log(z) New: 235.87612866528193\n",
-      "INFO:morphZ.bridge:Converged in 2 iterations. log(z): 235.8779 +/-: 0.0167\n",
-      "INFO:morphZ.bridge:Filtered proposal samples: 890 valid samples out of 1000 total samples.\n",
-      "INFO:morphZ.bridge:iteration: 1 log(z) old: 235.98464656240114 log(z) New: 235.8872515154888\n",
-      "INFO:morphZ.bridge:iteration: 2 log(z) old: 235.8872515154888 log(z) New: 235.88418152566456\n",
-      "INFO:morphZ.bridge:Converged in 2 iterations. log(z): 235.8873 +/-: 0.0170\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Filtered proposal samples: 923 valid samples out of 1000 total samples.\n",
+      "iteration: 2 log(z) old: 236.361225926888 log(z) New: 236.36189770624014\n",
+      "Converged in 2 iterations. log(z): 236.3619 +/-: 0.1626\n",
+      "\n",
+      "Filtered proposal samples: 3991 valid samples out of 5000 total samples.\n",
       "Estimation 9/10\n",
-      "iteration: 2 log(z) old: 235.8778907560744 log(z) New: 235.87612866528193\n",
-      "Converged in 2 iterations. log(z): 235.8779 +/-: 0.0167\n",
+      "iteration: 3 log(z) old: 235.99227418911298 log(z) New: 235.9953654476925\n",
+      "Converged in 3 iterations. log(z): 235.9954 +/-: 0.1860\n",
       "\n",
-      "Filtered proposal samples: 890 valid samples out of 1000 total samples.\n",
+      "Filtered proposal samples: 4035 valid samples out of 5000 total samples.\n",
       "Estimation 10/10\n",
-      "iteration: 2 log(z) old: 235.8872515154888 log(z) New: 235.88418152566456\n",
-      "Converged in 2 iterations. log(z): 235.8873 +/-: 0.0170\n",
+      "iteration: 2 log(z) old: 235.89856421963609 log(z) New: 235.90221785032813\n",
+      "Converged in 2 iterations. log(z): 235.9022 +/-: 0.1972\n",
       "\n",
-      "Saved log(z) to ./morphZ_eggbox//logz_morph_z_pair_0.01.txt\n",
+      "Saved log(z) to ./morphZ_eggbox//logz_morph_z_pair_silverman.txt\n",
       "True: 235.856\n"
      ]
     }
@@ -319,8 +224,8 @@
     "samples,\n",
     "log_prob,\n",
     "lnprobfn,\n",
-    "n_resamples=1000,\n",
-    "thin=1,n_estimations=10,morph_type=\"pair\",kde_bw=0.01,output_path='./morphZ_eggbox/')\n",
+    "n_resamples=5000,\n",
+    "thin=1,n_estimations=10,morph_type=\"pair\",kde_bw=\"silverman\",output_path='./morphZ_eggbox/')\n",
     "print('True:', true_logz)"
    ]
   },
