2_group and plot fixes.

--- a/examples/gaussian shell.ipynb
+++ b/examples/gaussian shell.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "2317364d",
    "metadata": {},
    "outputs": [
@@ -27,11 +27,12 @@
      "output_type": "stream",
      "text": [
       "Twin Gaussian Shell Problem Setup:\n",
-      "Dimensions: 20\n",
-      "Prior bounds: [-6.0, 6.0]^20\n",
+      "Dimensions: 30\n",
+      "Prior bounds: [-6.0, 6.0]^30\n",
       "Shell centers: c1=[-3.5  0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.\n",
-      "  0.   0.   0.   0.   0.   0. ], c2=[3.5 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n",
-      " 0.  0. ]\n",
+      "  0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.\n",
+      "  0.   0. ], c2=[3.5 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n",
+      " 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0. ]\n",
       "Shell radii: r1=2.0, r2=2.0\n",
       "Shell widths: w1=0.1, w2=0.1\n",
       "Running dynesty Nested Sampling on Gaussian shell...\n"
@@ -41,14 +42,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "0it [00:00, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "5825it [00:08, 654.27it/s, +150 | bound: 237 | nc: 1 | ncall: 217861 | eff(%):  2.744 | loglstar:   -inf <  1.384 <    inf | logz: -34.968 +/-  0.485 | dlogz:  0.001 >  0.100]"
+      "11907it [00:25, 471.60it/s, +200 | bound: 397 | nc: 1 | ncall: 566147 | eff(%):  2.139 | loglstar:   -inf <  1.384 <    inf | logz: -55.651 +/-  0.528 | dlogz:  0.000 >  0.100]\n"
      ]
     },
     {
@@ -57,16 +51,9 @@
      "text": [
       "\n",
       "==== RESULTS ====\n",
-      "dynesty estimated logZ = -34.968 ± 0.573\n",
+      "dynesty estimated logZ = -55.651 ± 0.629\n",
       "True logZ (literature) = -36.090\n",
-      "Error = 1.122\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "Error = -19.561\n"
      ]
     }
    ],
@@ -76,7 +63,7 @@
     "\n",
     "# Prior cube: [-L, L]^D \n",
     "L = 6.0\n",
-    "ndim = 20\n",
+    "ndim = 30\n",
     "prior_volume = (2*L)**ndim\n",
     "\n",
     "# Parameters of the twin shells (from paper)\n",
@@ -223,7 +210,7 @@
     "        loglikelihood,\n",
     "        prior_transform,\n",
     "        ndim,\n",
-    "        nlive=150,      # number of live points; increase for accuracy\n",
+    "        nlive=200,      # number of live points; increase for accuracy\n",
     "        sample=\"rwalk\",  # random-walk proposals; can try \"unif\", \"slice\"\n",
     "        bound=\"multi\",   # bounding method (\"multi\" good for multimodal)\n",
     "    )\n",
@@ -269,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "ad336152",
    "metadata": {},
    "outputs": [
@@ -277,39 +264,39 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total samples: 598 Dimensions: 20\n",
-      "Filtered proposal samples: 962 valid samples out of 1000 total samples.\n",
+      "Total samples: 2422 Dimensions: 30\n",
+      "Filtered proposal samples: 994 valid samples out of 1000 total samples.\n",
       "Estimation 1/5\n",
-      "iteration: 3 log(z) old: -36.501498321748294 log(z) New: -36.50803340750437\n",
-      "Converged in 3 iterations. log(z): -36.5015 +/-: 0.0659\n",
+      "iteration: 4 log(z) old: -61.49647317332282 log(z) New: -61.50073382284116\n",
+      "Converged in 4 iterations. log(z): -61.4965 +/-: 0.0446\n",
       "\n",
-      "Filtered proposal samples: 952 valid samples out of 1000 total samples.\n",
+      "Filtered proposal samples: 992 valid samples out of 1000 total samples.\n",
       "Estimation 2/5\n",
-      "iteration: 4 log(z) old: -36.460075888832954 log(z) New: -36.46170183892332\n",
-      "Converged in 4 iterations. log(z): -36.4601 +/-: 0.0660\n",
+      "iteration: 4 log(z) old: -61.401767369128045 log(z) New: -61.40823968239333\n",
+      "Converged in 4 iterations. log(z): -61.4018 +/-: 0.0432\n",
       "\n",
-      "Filtered proposal samples: 970 valid samples out of 1000 total samples.\n",
+      "Filtered proposal samples: 992 valid samples out of 1000 total samples.\n",
       "Estimation 3/5\n",
-      "iteration: 3 log(z) old: -36.54941082209759 log(z) New: -36.55497701716333\n",
-      "Converged in 3 iterations. log(z): -36.5494 +/-: 0.0674\n",
+      "iteration: 5 log(z) old: -61.47624450044548 log(z) New: -61.478634724046834\n",
+      "Converged in 5 iterations. log(z): -61.4762 +/-: 0.0453\n",
       "\n",
-      "Filtered proposal samples: 949 valid samples out of 1000 total samples.\n",
+      "Filtered proposal samples: 993 valid samples out of 1000 total samples.\n",
       "Estimation 4/5\n",
-      "iteration: 3 log(z) old: -36.53511841932941 log(z) New: -36.53820340278603\n",
-      "Converged in 3 iterations. log(z): -36.5351 +/-: 0.0658\n",
+      "iteration: 4 log(z) old: -61.44145725881658 log(z) New: -61.449637411459165\n",
+      "Converged in 4 iterations. log(z): -61.4415 +/-: 0.0439\n",
       "\n",
-      "Filtered proposal samples: 962 valid samples out of 1000 total samples.\n",
+      "Filtered proposal samples: 997 valid samples out of 1000 total samples.\n",
       "Estimation 5/5\n",
-      "iteration: 3 log(z) old: -36.47971016136438 log(z) New: -36.485035722966586\n",
-      "Converged in 3 iterations. log(z): -36.4797 +/-: 0.0651\n",
+      "iteration: 4 log(z) old: -61.49785919369648 log(z) New: -61.50728735617491\n",
+      "Converged in 4 iterations. log(z): -61.4979 +/-: 0.0456\n",
       "\n",
-      "Saved log(z) to ./morphZ_gaussian_shell_group//logz_morph_z_pair_silverman.txt\n",
+      "Saved log(z) to ./morphZ_gaussian_shell_group//logz_morph_z_2_group_silverman.txt\n",
       "True: -36.09\n"
      ]
     }
    ],
    "source": [
-    "samples = posterior_samples[::10,:]  # total_samples[::20,:]\n",
+    "samples = posterior_samples[::5,:]  # total_samples[::20,:]\n",
     "tot_len , ndim = samples.shape\n",
     "print('Total samples:', tot_len, 'Dimensions:', ndim)\n",
     "log_prob = np.zeros(tot_len)\n",
@@ -322,7 +309,7 @@
     "log_prob,\n",
     "lnprobfn,\n",
     "n_resamples=1000,\n",
-    "thin=1,n_estimations=5,morph_type=\"pair\",kde_bw=\"silverman\",output_path='./morphZ_gaussian_shell_group/')\n",
+    "thin=1,n_estimations=5,morph_type=\"2_group\",kde_bw=\"silverman\",output_path='./morphZ_gaussian_shell_group/',plot=True)\n",
     "print('True:', true_logz)"
    ]
   },
