--- a/examples/gaussian shell.ipynb
+++ b/examples/gaussian shell.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "2317364d",
    "metadata": {},
    "outputs": [
@@ -42,7 +42,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "11907it [00:25, 471.60it/s, +200 | bound: 397 | nc: 1 | ncall: 566147 | eff(%):  2.139 | loglstar:   -inf <  1.384 <    inf | logz: -55.651 +/-  0.528 | dlogz:  0.000 >  0.100]\n"
+      "11803it [00:26, 437.65it/s, +200 | bound: 394 | nc: 1 | ncall: 563261 | eff(%):  2.132 | loglstar:   -inf <  1.384 <    inf | logz: -55.129 +/-  0.525 | dlogz:  0.000 >  0.100]\n"
      ]
     },
     {
@@ -51,9 +51,9 @@
      "text": [
       "\n",
       "==== RESULTS ====\n",
-      "dynesty estimated logZ = -55.651 ± 0.629\n",
+      "dynesty estimated logZ = -55.129 ± 0.625\n",
       "True logZ (literature) = -36.090\n",
-      "Error = -19.561\n"
+      "Error = -19.039\n"
      ]
     }
    ],
@@ -241,54 +241,216 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "9424722b",
    "metadata": {},
    "outputs": [],
    "source": [
     "import morphZ\n",
+    "import logging\n",
+    "from morphZ import setup_logging ; setup_logging(level=logging.INFO)\n",
     "\n",
+    "import g_shell as gs\n",
     "    \n",
-    "def lnprobfn(theta):\n",
-    "    \"\"\"Log-probability combining prior and likelihood.\"\"\"\n",
-    "    return logprior(theta) + loglikelihood(theta)"
+    "# def lnprobfn(theta):\n",
+    "#     \"\"\"Log-probability combining prior and likelihood.\"\"\"\n",
+    "#     return logprior(theta) + loglikelihood(theta)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "id": "ad336152",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:morphZ.morph:Using Morph_Group for proposal distribution.\n",
+      "INFO:morphZ.morph:Using multiprocessing with 6 workers for bridge sampling.\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total samples: 2422 Dimensions: 30\n",
-      "Filtered proposal samples: 994 valid samples out of 1000 total samples.\n",
+      "Total samples: 2401 Dimensions: 30\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:morphZ.bridge_multiprocess:Filtered proposal samples: 9892 valid samples out of 10000 total samples.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Filtered proposal samples: 9892 valid samples out of 10000 total samples.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:morphZ.bridge_multiprocess:iteration: 1 log(z) old: -60.15122964279204 log(z) New: -60.558865261848965\n",
+      "INFO:morphZ.bridge_multiprocess:iteration: 2 log(z) old: -60.558865261848965 log(z) New: -60.62895919337263\n",
+      "INFO:morphZ.bridge_multiprocess:iteration: 3 log(z) old: -60.62895919337263 log(z) New: -60.64142231745201\n",
+      "INFO:morphZ.bridge_multiprocess:iteration: 4 log(z) old: -60.64142231745201 log(z) New: -60.64364930059958\n",
+      "INFO:morphZ.bridge_multiprocess:Converged in 4 iterations. log(z): -60.6414 +/-: 0.0207\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Estimation 1/5\n",
-      "iteration: 4 log(z) old: -61.49647317332282 log(z) New: -61.50073382284116\n",
-      "Converged in 4 iterations. log(z): -61.4965 +/-: 0.0446\n",
-      "\n",
-      "Filtered proposal samples: 992 valid samples out of 1000 total samples.\n",
+      "iteration: 4 log(z) old: -60.64142231745201 log(z) New: -60.64364930059958\n",
+      "Converged in 4 iterations. log(z): -60.6414 +/-: 0.0207\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:morphZ.bridge_multiprocess:Filtered proposal samples: 9886 valid samples out of 10000 total samples.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Filtered proposal samples: 9886 valid samples out of 10000 total samples.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:morphZ.bridge_multiprocess:iteration: 1 log(z) old: -60.16811634825051 log(z) New: -60.55936260439591\n",
+      "INFO:morphZ.bridge_multiprocess:iteration: 2 log(z) old: -60.55936260439591 log(z) New: -60.626861513004556\n",
+      "INFO:morphZ.bridge_multiprocess:iteration: 3 log(z) old: -60.626861513004556 log(z) New: -60.63887484889846\n",
+      "INFO:morphZ.bridge_multiprocess:iteration: 4 log(z) old: -60.63887484889846 log(z) New: -60.641022900052164\n",
+      "INFO:morphZ.bridge_multiprocess:Converged in 4 iterations. log(z): -60.6389 +/-: 0.0207\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Estimation 2/5\n",
-      "iteration: 4 log(z) old: -61.401767369128045 log(z) New: -61.40823968239333\n",
-      "Converged in 4 iterations. log(z): -61.4018 +/-: 0.0432\n",
-      "\n",
-      "Filtered proposal samples: 992 valid samples out of 1000 total samples.\n",
+      "iteration: 4 log(z) old: -60.63887484889846 log(z) New: -60.641022900052164\n",
+      "Converged in 4 iterations. log(z): -60.6389 +/-: 0.0207\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:morphZ.bridge_multiprocess:Filtered proposal samples: 9890 valid samples out of 10000 total samples.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Filtered proposal samples: 9890 valid samples out of 10000 total samples.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:morphZ.bridge_multiprocess:iteration: 1 log(z) old: -59.93196880291696 log(z) New: -60.51689197466937\n",
+      "INFO:morphZ.bridge_multiprocess:iteration: 2 log(z) old: -60.51689197466937 log(z) New: -60.62329054221572\n",
+      "INFO:morphZ.bridge_multiprocess:iteration: 3 log(z) old: -60.62329054221572 log(z) New: -60.64341056148471\n",
+      "INFO:morphZ.bridge_multiprocess:iteration: 4 log(z) old: -60.64341056148471 log(z) New: -60.64723559751507\n",
+      "INFO:morphZ.bridge_multiprocess:Converged in 4 iterations. log(z): -60.6434 +/-: 0.0210\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Estimation 3/5\n",
-      "iteration: 5 log(z) old: -61.47624450044548 log(z) New: -61.478634724046834\n",
-      "Converged in 5 iterations. log(z): -61.4762 +/-: 0.0453\n",
-      "\n",
-      "Filtered proposal samples: 993 valid samples out of 1000 total samples.\n",
+      "iteration: 4 log(z) old: -60.64341056148471 log(z) New: -60.64723559751507\n",
+      "Converged in 4 iterations. log(z): -60.6434 +/-: 0.0210\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:morphZ.bridge_multiprocess:Filtered proposal samples: 9884 valid samples out of 10000 total samples.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Filtered proposal samples: 9884 valid samples out of 10000 total samples.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:morphZ.bridge_multiprocess:iteration: 1 log(z) old: -60.169359518609845 log(z) New: -60.5671203985069\n",
+      "INFO:morphZ.bridge_multiprocess:iteration: 2 log(z) old: -60.5671203985069 log(z) New: -60.63844933680139\n",
+      "INFO:morphZ.bridge_multiprocess:iteration: 3 log(z) old: -60.63844933680139 log(z) New: -60.65170684819988\n",
+      "INFO:morphZ.bridge_multiprocess:iteration: 4 log(z) old: -60.65170684819988 log(z) New: -60.65418468235432\n",
+      "INFO:morphZ.bridge_multiprocess:Converged in 4 iterations. log(z): -60.6517 +/-: 0.0210\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Estimation 4/5\n",
-      "iteration: 4 log(z) old: -61.44145725881658 log(z) New: -61.449637411459165\n",
-      "Converged in 4 iterations. log(z): -61.4415 +/-: 0.0439\n",
-      "\n",
-      "Filtered proposal samples: 997 valid samples out of 1000 total samples.\n",
+      "iteration: 4 log(z) old: -60.65170684819988 log(z) New: -60.65418468235432\n",
+      "Converged in 4 iterations. log(z): -60.6517 +/-: 0.0210\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:morphZ.bridge_multiprocess:Filtered proposal samples: 9871 valid samples out of 10000 total samples.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Filtered proposal samples: 9871 valid samples out of 10000 total samples.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:morphZ.bridge_multiprocess:iteration: 1 log(z) old: -60.17210586426401 log(z) New: -60.57901706041223\n",
+      "INFO:morphZ.bridge_multiprocess:iteration: 2 log(z) old: -60.57901706041223 log(z) New: -60.64786350989249\n",
+      "INFO:morphZ.bridge_multiprocess:iteration: 3 log(z) old: -60.64786350989249 log(z) New: -60.659912686557576\n",
+      "INFO:morphZ.bridge_multiprocess:iteration: 4 log(z) old: -60.659912686557576 log(z) New: -60.662031828652204\n",
+      "INFO:morphZ.bridge_multiprocess:Converged in 4 iterations. log(z): -60.6599 +/-: 0.0207\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Estimation 5/5\n",
-      "iteration: 4 log(z) old: -61.49785919369648 log(z) New: -61.50728735617491\n",
-      "Converged in 4 iterations. log(z): -61.4979 +/-: 0.0456\n",
+      "iteration: 4 log(z) old: -60.659912686557576 log(z) New: -60.662031828652204\n",
+      "Converged in 4 iterations. log(z): -60.6599 +/-: 0.0207\n",
       "\n",
       "Saved log(z) to ./morphZ_gaussian_shell_group//logz_morph_z_2_group_silverman.txt\n",
       "True: -36.09\n"
@@ -302,14 +464,14 @@
     "log_prob = np.zeros(tot_len)\n",
     "\n",
     "for i in range(tot_len):\n",
-    "    log_prob[i] = lnprobfn(samples[i,:])\n",
+    "    log_prob[i] = gs.lnprobfn(samples[i,:])\n",
     "\n",
     "log_p_estimate = morphZ.evidence(\n",
     "samples,\n",
     "log_prob,\n",
-    "lnprobfn,\n",
-    "n_resamples=1000,\n",
-    "thin=1,n_estimations=5,morph_type=\"2_group\",kde_bw=\"silverman\",output_path='./morphZ_gaussian_shell_group/',plot=True)\n",
+    "gs.lnprobfn,\n",
+    "n_resamples=10000,\n",
+    "thin=1,n_estimations=5,morph_type=\"2_group\",kde_bw=\"silverman\",output_path='./morphZ_gaussian_shell_group/',pool=6)\n",
     "print('True:', true_logz)"
    ]
   },
